// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component alertdialog role 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="assertive"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m db-modal__dialog--open"
          role="alertdialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal should have alert role.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component no close button 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          />
          <main
            class="db-modal__content"
          >
            Modal without a close button.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render PrimaryButton 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal with PrimaryButton.
          </main>
          <div
            class="db-modal__actions"
          >
            <div
              class="db-modal__action db-modal__action--primary"
            >
              <button
                class="db-button db-button--primary db-button--default db-button--size-l"
                type="button"
              >
                Primary Button Here
              </button>
              <span
                class="db-inline-spacer"
              >
                 
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render SecondaryButton 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal with SecondaryButton.
          </main>
          <div
            class="db-modal__actions"
          >
            <div
              class="db-modal__action db-modal__action--secondary"
            >
              <button
                class="db-button db-button--primary db-button--default db-button--size-l"
                type="button"
              >
                Secondary Button Here
              </button>
              <span
                class="db-inline-spacer"
              >
                 
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render optional properties 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal some-overlay-class db-modal--open"
      >
        <div
          aria-describedby="modal-desc"
          aria-labelledby="modal-label"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m some-class db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Custom text"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Custom text
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
            <h2
              class="db-modal__title"
              id="ariaLabelledBy"
            >
              <span
                class="db-headline db-fs7 t:db-fs8 d:db-fs8"
              >
                Modal TITLE
              </span>
            </h2>
          </header>
          <main
            class="db-modal__content"
          >
            This is a basic render including optional properties.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component render required properties only 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            This is a basic render of required properties.
          </main>
        </div>
      </div>
    </div>
  </div>
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size auto 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-auto db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal should have size=
            auto
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size l 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-l db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal should have size=
            l
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size m 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-m db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal should have size=
            m
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;

exports[`Modal Component size s 1`] = `
<body
  class="db-body--db-modal-open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    id="root-test-id"
  />
  <div
    aria-live="polite"
    aria-relevant="additions removals"
    id="portal-test-id"
  >
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    />
    <div
      class="db-modal-portal"
    >
      <div
        class="db-modal db-modal--open"
      >
        <div
          aria-labelledby="modal-title"
          aria-modal="true"
          class="db-modal__dialog db-modal__dialog--width-s db-modal__dialog--open"
          role="dialog"
          tabindex="-1"
        >
          <header
            class="db-modal__header db-modal__header--collapse"
          >
            <button
              class="db-button db-button--hover-only db-button--square db-button--size-m db-modal__closebutton"
              title="Close the dialogue"
              type="button"
            >
              <svg
                class="db-icon"
                height="24"
                role="presentation"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 18c0-.281.094-.5.281-.688L10.594 12 5.28 6.687A1.03 1.03 0 015.031 6c0-.563.438-.969.969-.969.281 0 .5.094.688.25L12 10.594l5.313-5.313A.92.92 0 0118 5c.563 0 1 .438 1 1 0 .281-.094.5-.313.688L13.407 12l5.28 5.313A.844.844 0 0119 18a.98.98 0 01-.969 1 .915.915 0 01-.718-.313L12 13.407l-5.313 5.28A.915.915 0 015.97 19 .98.98 0 015 18z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                aria-hidden="false"
              >
                Close the dialogue
              </span>
            </button>
            <span
              class="db-inline-spacer"
            >
               
            </span>
          </header>
          <main
            class="db-modal__content db-modal__content--right-gap"
          >
            Modal should have size=
            s
            .
          </main>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div />
  </div>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
</body>
`;
